# Glossary

./: .env.example  .gitignore  AGENTS.md  AUTH_SETUP.md  Dockerfile  README.md  TEMPLATE_WORKFLOWS.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  build-and-push.yml  ci.yml  frontend-build.yml  frontend-e2e.yml  frontend-lint.yml  frontend-unit.yml  python-gitleaks.yml  python-release.yml  python-tests.yml
.woodpecker/: deploy-production.yml  deploy-staging.yml  first-workflow.yaml
alembic/: env.py
alembic/versions/: 5b64dd02b186_initial_schema.py
app/: auth.py  database.py  main.py  models.py  schemas.py  seed.py
app/crud/: __init__.py  backup.py  nested_router.py  registry.py  router_factory.py  seed.py
app/routers/: backup.py  categories.py  terms.py
app/services/: openai_glossary_extract.py  openai_recommendation.py
base_data_import/: glossary-seed.json
docs/: api.md  architecture.md  authentication.md  configuration.md  deployment.md  development.md  setup.md  testing.md
frontend/: README.md  auth-popup.html  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: backup.spec.js  categories.spec.js  definitions.spec.js  helpers.js  home.spec.js  pdf.spec.js  restore.spec.js  search.spec.js  terms.spec.js
frontend/public/: auth-popup.html
frontend/src/: App.jsx  index.css  main.jsx
k8s/production/: cnpg-database.yaml  (+6 more)
resources/: __init__.py  config.py  models.py  schemas.py
tests/: conftest.py  test_auth.py  test_backup.py  test_categories.py  test_definitions.py  test_extract_glossary.py  test_openai_recommendation.py  test_router_unit_coverage.py  test_seed.py  test_terms.py
(+44 files in other folders)
