[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "glossary"
version = "0.1.0"
description = "Glossary API (English/Danish) with categories, terms, and definitions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.15",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "greenlet>=3.3.2",
    "httpx>=0.27",
    "PyJWT[crypto]>=2.9",
]

# Used by CI: pip install -e ".[dev]"
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.15.7",
    "pytest-cov",
]

# Used locally: uv sync --dev
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.15.7",
    "pytest-cov",
]


[tool.setuptools]
packages = ["app", "resources"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "T20",   # flake8-print
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # Depends() in function defaults is idiomatic FastAPI
    "N803",  # PascalCase function args (Model) used for readability in generic factories
    "N806",  # PascalCase local vars (Model, Schema) used for readability in generic factories
]

[tool.ruff.lint.isort]
known-first-party = ["app", "resources"]
